--- a/Session5-Asp.net/Web.config
+++ b/Session5-Asp.net/Web.config
@@ -5,9 +5,10 @@
   -->
 <configuration>
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
+    <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2" />
-    <pages>
+    <trace enabled="true"/>
+    <pages  >
       <namespaces>
         <add namespace="System.Web.Optimization" />
       </namespaces>
